7 April 2015: Wouter
	- Libunbound skips dos-line-endings from etc/hosts.

2 April 2015: Wouter
	- Fix #660: Fix interface-automatic broken in the presence of
	  asymmetric routing.

26 March 2015: Wouter
	- remote.c probedelay line is easier to read.
	- rename ldns subdirectory to sldns to avoid name collision.

25 March 2015: Wouter
	- Fix #657:  libunbound(3) recommends deprecated
	  CRYPTO_set_id_callback.
	- If unknown trust anchor algorithm, and libressl is used, error
	  message encourages upgrade of the libressl package.

23 March 2015: Wouter
	- Fix segfault on user not found at startup (from Maciej Soltysiak).

20 March 2015: Wouter
	- Fixed to add integer overflow checks on allocation (defense in depth).

19 March 2015: Wouter
	- Add ip-transparent config option for bind to non-local addresses.

17 March 2015: Wouter
	- Use reallocarray for integer overflow protection, patch submitted
	  by Loganaden Velvindron.

16 March 2015: Wouter
	- Fixup compile on cygwin, more portable openssl thread id.

12 March 2015: Wouter
	- Updated default keylength in unbound-control-setup to 3k.

10 March 2015: Wouter
	- Fix lintian warning in unbound-checkconf man page (from Andreas
	  Schulze).
	- print svnroot when building windows dist.
	- iana portlist update.
	- Fix warning on sign compare in getentropy_linux.

9 March 2015: Wouter
	- Fix #644: harden-algo-downgrade option, if turned off, fixes the
	  reported excessive validation failure when multiple algorithms
	  are present.  It allows the weakest algorithm to validate the zone.
	- iana portlist update.

5 March 2015: Wouter
	- contrib/unbound_smf22.tar.gz: Solaris SMF installation/removal
	  scripts.  Contributed by Yuri Voinov.
	- Document that incoming-num-tcp increase is good for large servers.
	- stats reports tcp usage, of incoming-num-tcp buffers.

4 March 2015: Wouter
	- Patch from Brad Smith that syncs compat/getentropy_linux with
	  OpenBSD's version (2015-03-04).