@@ -1,5 +1,11 @@
 7 April 2015: Wouter
 	- Libunbound skips dos-line-endings from etc/hosts.
+	- Unbound exits with a fatal error when the auto-trust-anchor-file
+	  fails to be writable.  This is seconds after startup.  You can
+	  load a readonly auto-trust-anchor-file with trust-anchor-file.
+	  The file has to be writable to notice the trust anchor change,
+	  without it, a trust anchor change will be unnoticed and the system
+	  will then become unoperable.
 
 2 April 2015: Wouter
 	- Fix #660: Fix interface-automatic broken in the presence of
